<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="username">Email</string>
    <string name="password">Password(Min 8 character)</string>
    <string name="signin">Sign in</string>
    <string name="signup">Do not have account..Register</string>
    <string name="signup1">Sign Up</string>
    <string name="signin1">Already Having account...Sign in</string>
    <string name="howtouse">How to Use The App</string>
    <string name="app_name">Your Donor</string>
    <string name="toggle_login_signin">New Here? Sign up</string>
    <string name="login">Login</string>
    <string name="error_email_required">Email Required</string>
    <string name="error_password_required">password can not be empty</string>
    <string name="welcome">Welcome to the Blood Bank</string>
    <string name="enterblood">Enter Blood Bank ID</string>
    <string name="search">Search</string>
    <string name="Whole_Human_Blood">Whole Human Blood</string>
    <string name="rbc">Packed Red Blood Cell</string>
    <string name="ffp">Fresh Frozen Plasma</string>
    <string name="pc">Platelets Concentrate</string>
    <string name="save">Save</string>
    <string name="dashboard">My dashboard</string>
    <string name="blood_nearby">Blood\nnearby</string>
    <string name="blood_avail">Check Blood\nAvailability</string>
    <string name="bloodbank">Bloodbank</string>
    <string name="org_camp">Organize \n   Camp</string>
    <string name="profile">Your Profile</string>
    <string name="contact">Contact\n lifelines</string>
    <string name="developer">Developer</string>
    <string name="enable_loc">Enable Location to continue</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="id">User ID</string>
    <string name="edit">Edit Your Profile</string>
    <string name="deregister">Deregister Your Account</string>
    <string name="changeName">Update Name</string>
    <string name="changeMob">Update Mobile</string>
    <string name="update">Update</string>
    <string name="forgot">Forgot Password</string>
    <string name="submit">submit</string>


    <!--<string name="Link_bus" tools:ignore="MissingTranslation">Link</string>-->
    <string-array name="choose">
        <item>Donor</item>
        <!--<item>Student</item>-->
    </string-array>
    <string name="title_activity_login2">Sign in</string>

    <string name="gps_dialog_title" tools:ignore="MissingTranslation">GPS...</string>
    <string name="gps_enable_message" tools:ignore="MissingTranslation"><![CDATA[GPS is not enable, Please enable it in next window.<br>]]></string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">Register</string>
    <string name="title_activity_driver_maps">Map</string>
    <string name="title_activity_student_maps">Map</string>
    <string name="get_eta">Get ETA</string>
    <string name="ReadyToGo">Ready to Donate</string>
    <string name="logout">Logout</string>
    <string name="request_wait">Search</string>
    <string name="isDriver">is_donor</string>
    <string name="locate_bus">Find nearest donor</string>
    <string name="selectBusTitle">Whats your Blood Group?</string>
    <string name="ok">OK</string>
    <string name="LOGO">Logo</string>
    <string name="Link_bus">Link Blood Group</string>
    <string name="Link_gropu">Link Blood Group</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="acceptor_maps_first_time_launch">acceptor_maps_first_time_launch</string>
    <string name="bus_no">Group_no</string>
    <string name="channel_name">channel_01</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="cancel">Cancel</string>
    <string name="channel_description">Notificattion channel for showing notificaiton for reqeust from Acceptor.</string>
    <string name="request_wait_notification">An acceptor nearby is requesting you for Blood.</string>
    <string name="launched_via_notification">launch_via_notification</string>

    <string-array name="Bgroup">
        <item>"A+ve"</item>
        <item>"A-ve"</item>
        <item>"B+ve"</item>
        <item>"B-ve"</item>
        <item>"AB+ve"</item>
        <item>"AB-ve"</item>
        <item>"O+ve"</item>
        <item>"O-ve"</item>
        <item>"Hospital"</item>
        <item>"Blood Bank"</item>
    </string-array>
</resources>
