<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/link_bus"
            android:title="@string/Link_bus"
            />

        <item
            android:id="@+id/request_wait"
            android:title="@string/request_wait"
            android:icon="@mipmap/ic_pan_tool_black_24dp"/>

        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@mipmap/ic_account_circle_black_24dp"/>



    </group>

    <!--<group android:menuCategory="container">-->

        <!--<string-array android:name="states">-->
            <!--<item >India</item>-->

            <!--<item >Pakisthan</item>-->

            <!--<item >Sri Lanka</item>-->

        <!--</string-array>-->

        <!--<string-array name="city_india">-->

            <!--<item>Mumbai</item>-->

            <!--<item>Chennai</item>-->

            <!--<item>Kolkata</item>-->

            <!--<item>Bangalore</item>-->

        <!--</string-array>-->

    <!--</group>-->


</menu>